Images and links

--- a/demosite/index.html
+++ b/demosite/index.html
@@ -5,6 +5,32 @@
     <title>My first website</title>
   </head>
   <body>
+    <!-- Control-/ is the shortcut for a comment -->
+    <h1>This is my main heading</h1>
 
+    <h2>Some text</h2>
+    <!-- These are the paragraphs -->
+    <p>This is my first ever webpage!</p>
+    <p>I hope you enjoy it.</p>
+
+    <!-- Demonstrate unordered list -->
+    <ul>
+      <li>Item 1 in my list</li>
+      <li>Something else</li>
+    </ul>
+    <!-- Ordered list -->
+    <ol>
+      <li>Most important item</li>
+      <li>First loser</li>
+    </ol>
+
+    <!-- Link to london.html -->
+    <p><a href="london.html">Find out about my trip to London</a></p>
+
+    <!-- External link -->
+    <a href="https://www.google.com/">Go to Google</a>
+
+    <!-- Image of Tower Bridge -->
+    <a href="london.html"><img src="images/towerbridge.jpg" alt="Tower Bridge, London"></a>
   </body>
 </html>
