--- a/europe/index.html
+++ b/europe/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <!-- Connect to our stylesheet -->
+    <!-- Link to stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <title>My trip to Europe</title>
   </head>
