--- a/europe/index.html
+++ b/europe/index.html
@@ -7,20 +7,28 @@
     <title>My trip to Europe</title>
   </head>
   <body>
-    <!-- Heading and welcome blurb -->
-        <h1>Trip to Europe</h1>
+
+      <div class="header">
+        <!-- Heading and welcome blurb -->
+            <h1>Trip to Europe</h1>
+
+      </div>
+    <div class="container">
+      <div class="countries">
+        <!-- List of countries I visited -->
         <p>I was lucky enough to visit Europe last year and wanted to share some of my experiences and photos
         </p>
-    <!-- List of countries I visited -->
-        <p class="bodytext">Some of the countries I visited were:</p>
-        <ul>
-          <li>United Kingdom</li>
-          <li>Italy</li>
-          <li>Greece</li>
-          <li>France</li>
-        </ul>
+            <p class="bodytext">Some of the countries I visited were:</p>
+            <ul>
+              <li>United Kingdom</li>
+              <li>Italy</li>
+              <li>Greece</li>
+              <li>France</li>
+            </ul>
 
-        <p>Discover more about what we saw in each country below!</p>
+            <p>Discover more about what we saw in each country!</p>
+      </div>
+      <div class="main-content">
         <!-- UK -->
         <h2>United Kingdom</h2>
         <p><a href="uk.html">Find out more here</a></p>
@@ -52,6 +60,11 @@
         </p>
         <p>We also drove down to Mont St Michel and visited the beaches of Normandy.
         </p>
+      </div>
+    </div>
+
+
+
 
   </body>
 </html>
